Update XMusic codebase with 26.2 release support, 16 version builds, JARs and responsive website