@@ -5,9 +5,8 @@ import com.mojang.blaze3d.platform.NativeImage;
 import com.mojang.blaze3d.systems.RenderSystem;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphics;
-import net.minecraft.client.renderer.RenderType;
 import net.minecraft.client.renderer.texture.DynamicTexture;
-import net.minecraft.resources.ResourceLocation;
+import net.minecraft.resources.Identifier;
 import com.codexceed.xmusic.source.TrackRef;
 import com.codexceed.xmusic.download.DownloadManager;
 import com.codexceed.xmusic.download.DownloadState;
@@ -16,6 +15,7 @@ import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.*;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -37,9 +37,20 @@ public final class ArtworkRenderer {
         t.setDaemon(true);
         return t;
     });
-    private static final Map<String, ResourceLocation> TEXTURE_CACHE = new ConcurrentHashMap<>();
+    private static final Map<String, Identifier> TEXTURE_CACHE = new java.util.LinkedHashMap<String, Identifier>(16, 0.75f, true) {
+        @Override
+        protected boolean removeEldestEntry(Map.Entry<String, Identifier> eldest) {
+            if (size() > 64) {
+                Minecraft.getInstance().execute(() -> {
+                    Minecraft.getInstance().getTextureManager().release(eldest.getValue());
+                });
+                return true;
+            }
+            return false;
+        }
+    };
     private static final Map<String, Boolean> DOWNLOADING = new ConcurrentHashMap<>();
-    private static int textureCounter = 0;
+    private static final java.util.concurrent.atomic.AtomicInteger textureCounter = new java.util.concurrent.atomic.AtomicInteger(0);
 
     static {
         Path dir = null;
@@ -81,15 +92,10 @@ public final class ArtworkRenderer {
             return;
         }
 
-        ResourceLocation loc = TEXTURE_CACHE.get(artworkUrl);
+        Identifier loc = TEXTURE_CACHE.get(artworkUrl);
         if (loc != null) {
-            RenderSystem.setShaderColor(1f, 1f, 1f, alpha);
             var texture = Minecraft.getInstance().getTextureManager().getTexture(loc);
-            if (texture != null) {
-                texture.setFilter(true, false);
-            }
-            g.blit(RenderType::guiTextured, loc, x, y, 0f, 0f, w, h, w, h);
-            RenderSystem.setShaderColor(1f, 1f, 1f, 1f); // Reset color shader immediately!
+            g.blit(loc, x, y, 0, 0, w, h, w, h); // Reset color shader immediately!
             
             // Draw a subtle border overlay to frame the artwork
             GuiRender.outline(g, x, y, w, h, (int)(0x30 * alpha) << 24 | 0xFFFFFF);
@@ -162,8 +168,18 @@ public final class ArtworkRenderer {
         GuiRender.outline(g, x, y, w, h, ((int)(0x35 * alpha) << 24) | (color & 0x00FFFFFF));
     }
 
+    private static boolean isValidArtworkUrl(String url) {
+        if (url == null || url.isBlank()) return false;
+        String lower = url.toLowerCase();
+        return lower.startsWith("https://") || lower.startsWith("http://");
+    }
+
     /** Download artwork to cache, then upload as MC texture on render thread. */
     private static void downloadAndLoad(String artworkUrl) {
+        if (!isValidArtworkUrl(artworkUrl)) {
+            DOWNLOADING.remove(artworkUrl);
+            return;
+        }
         try {
             String hash = Integer.toHexString(artworkUrl.hashCode());
             Path cachedFile = CACHE_DIR != null ? CACHE_DIR.resolve(hash + ".png") : null;
@@ -197,7 +213,7 @@ public final class ArtworkRenderer {
     }
 
     private static void downloadToFile(String urlStr, Path target) throws IOException {
-        HttpURLConnection conn = (HttpURLConnection) new URL(urlStr).openConnection();
+        HttpURLConnection conn = (HttpURLConnection) URI.create(urlStr).toURL().openConnection();
         conn.setConnectTimeout(5000);
         conn.setReadTimeout(10000);
         conn.setRequestProperty("User-Agent", "CodeX-Music-Player/1.0");
@@ -229,10 +245,9 @@ public final class ArtworkRenderer {
     private static void loadTexture(String artworkUrl, Path file) throws IOException {
         try (InputStream is = Files.newInputStream(file)) {
             NativeImage image = NativeImage.read(is);
-            int texId = textureCounter++;
+            int texId = textureCounter.getAndIncrement();
             DynamicTexture texture = new DynamicTexture(() -> "xmusic_art_" + texId, image);
-            texture.setFilter(true, false);
-            ResourceLocation loc = ResourceLocation.fromNamespaceAndPath("xmusic", "art_" + texId);
+            Identifier loc = Identifier.fromNamespaceAndPath("xmusic", "art_" + texId);
             Minecraft.getInstance().getTextureManager().register(loc, texture);
             TEXTURE_CACHE.put(artworkUrl, loc);
             XMusic.LOGGER.info("Artwork texture loaded: {}", artworkUrl);
@@ -241,9 +256,15 @@ public final class ArtworkRenderer {
 
     /** Clear all cached textures (call on resource reload). */
     public static void clearCache() {
-        for (ResourceLocation loc : TEXTURE_CACHE.values()) {
+        for (Identifier loc : TEXTURE_CACHE.values()) {
             Minecraft.getInstance().getTextureManager().release(loc);
         }
         TEXTURE_CACHE.clear();
     }
 }
+
+
+
+
+
+
